--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bignumber.js": "^9.1.2",
+    "printf": "^0.6.1",
     "sweetalert2": "^11.6.13",
     "vue": "^3.4.21"
   },
