--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bignumber.js": "^9.1.2",
     "printf": "^0.6.1",
     "sweetalert2": "^11.6.13",
+    "tippy.js": "^6.3.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
