--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qti3-item-player-vue3",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "QTI 3 Item Player implemented with Vue 3",
   "author": {
     "name": "Paul Grudnitski",
@@ -17,20 +17,21 @@
     "Vue 3"
   ],
   "type": "module",
+  "files": ["dist"],
+  "main": "./dist/qti3-item-player-vue3.umd.js",
+  "module": "./dist/qti3-item-player-vue3.js",
+  "exports": {
+    ".": {
+      "import": "./dist/qti3-item-player-vue3.js",
+      "require": "./dist/qti3-item-player-vue3.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
-  },
-  "files": ["dist"],
-  "main": "./dist/qti3-item-player-vue3.umd.cjs",
-  "module": "./dist/qti3-item-player-vue3.js",
-  "exports": {
-    ".": {
-      "import": "./dist/qti3-item-player-vue3.js",
-      "require": "./dist/qti3-item-player-vue3.umd.cjs"
-    }
   },
   "dependencies": {
     "axios": "^1.7.2",
